--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>platops</title>
+    <meta name="description" content="PlatOps provides Cloud managed services, IT consulations, dedicated support, monitoring and security managed services for all types of businesses.">
+    <meta name="keywords" content="Cloud services, Secured cloud service, DevOps Assessment, DevOps Management, DevOps Automation, Application Services">
   </head>
   <body>
     <div id="app"></div>
